Fix chart clipping outside

--- a/inner_air/profile/dev/scss/profile.scss
+++ b/inner_air/profile/dev/scss/profile.scss
@@ -36,7 +36,8 @@
         .chart {
             @include tl.drop-shade;
             margin: 1rem;
-            height: 30em;
+            height: 40em;
+            width: 90%;
             background-color: tl.$pastel-blue;
             border-radius: 10px;
             margin: 0.5rem auto;
